# 1inchXNear

./: .env.ex  .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  Action_Plans_extracted.txt  CLAUDE.md  COMPLIANCE_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STEPS.md  DOCKER_VERIFICATION.md  Dockerfile  Dockerfile.simple  QUICK_DEPLOY.md  README.md  REAL-SWAPS-READY.md  SIT_EXECUTION_REPORT.md  TASK.md  TECT_FR_extracted.txt  TESTING_DEPLOYMENT_PROCESS.md  TESTNET_DEPLOYMENT.md  UAT_INSTRUCTIONS.md  docker-compose.yml  eslint.config.mjs  explanation.md  package-lock.json  package.json  setup-near-integration.md  tsconfig.json  ~$tion Plans.docx
cross-chain-resolver-example/: pnpm-lock.yaml
demo/: DEPLOYMENT-STATUS.md  NEAR-ETH-FIX.md  contract-based-transfer.js  jest.config.mjs  jest.setup.mjs  next.config.js  package-lock.json  package.json  real-transfer-test.js  tailwind.config.js  test-implementation.js  test-near-wallet-fix.js  test-real-near-transfer.js  trustless-integration-test.js
deployment-package/: AllInOne.sol  EscrowFactory.sol  IEscrowFactory.sol
ethereum/: .env.example  TESTING.md  check-balance.sh
materials/: 1inchFusion.md  1inchFusionExplain.md  hackathon-deliverables.md
near-contracts/: deploy-quick.js  deploy-real-contract.js  deploy-with-cli.sh  deploy.sh  login-helper.sh
near/contracts/: Cargo.toml
near/contracts/src/: lib.rs
scripts/: deploy-all.ts  deploy-ethereum-simple.js  deploy-testnet-real.js  verify-deployment.ts
shared/: jest.config.js  package-lock.json  package.json  tsconfig.json
(+100 files in other folders)
