[package]
name = "fusion-near-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.5.0"
near-contract-standards = "5.5.0"
uint = { version = "0.9", default-features = false }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.0", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = "z"  
lto = true
debug = false
panic = "abort"
overflow-checks = true